<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mid"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/linear_layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginBottom="@dimen/mid"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:text="@string/board_color"/>
        <Spinner
            android:id="@+id/activeCell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:spinnerMode="dropdown" />
        <Spinner
            android:id="@+id/inactiveCell"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginBottom="@dimen/mid"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout1"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:text="@string/player_one_piece"/>
        <Spinner
            android:id="@+id/player_one_piece"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:spinnerMode="dropdown" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/mid"
        android:layout_marginBottom="@dimen/mid"
        android:layout_marginStart="@dimen/small"
        android:layout_marginEnd="@dimen/small"
        android:gravity="center_vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout2"
        app:layout_constraintRight_toRightOf="parent">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:text="@string/player_two_piece"/>
        <Spinner
            android:id="@+id/player_two_piece"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:layout_marginStart="@dimen/small"
            android:layout_marginEnd="@dimen/small"
            android:spinnerMode="dropdown" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>