<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/mid"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/mid"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/card1"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="3dp"
        app:cardMaxElevation="6dp"
        tools:ignore="PrivateResource">
        <TextView
            android:id="@+id/turn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="@dimen/small"
            android:textStyle="bold"
            android:text="@string/player_one_s_turn"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/mid"
        app:layout_constraintBottom_toTopOf="@+id/board"
        app:layout_constraintStart_toStartOf="parent"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="3dp"
        app:cardMaxElevation="6dp"
        tools:ignore="PrivateResource">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">
            <TextView
                android:id="@+id/player_one"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_one_s_piece"
                android:padding="@dimen/small"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/player_one_piece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piece"
                android:padding="@dimen/small"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/player_one"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pause"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:onClick="showBottomSheet"
        app:layout_constraintTop_toTopOf="@+id/card1"
        app:layout_constraintBottom_toBottomOf="@+id/card1"
        app:layout_constraintEnd_toEndOf="parent"/>

    <FrameLayout
        android:id="@+id/board"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <com.assignment.draughtsgame.views.CustomSquareView
            android:id="@+id/gridview"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:horizontalSpacing="0dp"
            android:verticalSpacing="0dp"
            android:numColumns="8"
            android:padding="@dimen/small"
            android:stretchMode="columnWidth"
            android:background="@color/colorPrimaryDark"/>
    </FrameLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/mid"
        app:layout_constraintTop_toBottomOf="@+id/board"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/cardview_light_background"
        app:cardElevation="3dp"
        app:cardMaxElevation="6dp"
        tools:ignore="PrivateResource">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/small">
            <TextView
                android:id="@+id/player_two" android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/player_two_s_piece"
                android:padding="@dimen/small"
                android:textStyle="normal"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
            <TextView
                android:id="@+id/player_two_piece"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/piece"
                android:padding="@dimen/small"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/player_two"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>